--- a/css/main.css
+++ b/css/main.css
@@ -1,22 +1,38 @@
+/**/
 *{
     font-family: 'Indie Flower', cursive;
 }
 
+/**/
 body{
-    margin-left: 30px;    
+    margin-top: 0px;
+    margin-left: 20px;    
 }
 
+/**/
 div{
-    height: 50px;
-    width: 70px;
     box-sizing: border-box;
-    margin-left: 20px;
+    margin-left: 10px;
+    text-align: center;
+    display: inline-block;
 }
 
+/**/
 .orange{
+    height: 30px;
+    width: 100px;
+    background: #ffc107;
+}
+
+.orange-one{
+    height: 30px;
+    width: 130px;
     background: #ffc107;
 }
 
 .black{
+    height: 20px;
+    width: 20px;
     background: black;
+    color: white;
 }
